--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -1101,37 +1101,35 @@ As per the Development Plan document, the team will be using branches on GitHub 
 \hline
 \multicolumn{19}{|c|}{\textbf{Functional Requirement-Test Matrix}}                          \\ \hline
  & \tiny{F1} & \tiny{F2} & \tiny{F3} & \tiny{F4} & \tiny{F5} & \tiny{F6} & \tiny{F7} & \tiny{F8} & \tiny{F9} & \tiny{F10} & \tiny{F11} & \tiny{F12} & \tiny{F13} & \tiny{F14} & \tiny{F15} & \tiny{F16} & \tiny{F17} & \tiny{F18} \\ \hline
-\tiny{SMC1}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SMC2}&\tiny{X}&\tiny{X}&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SMC3}&\tiny{X}&&&\tiny{X}&&&&&&&&&&&&&& \\ \hline
-\tiny{SMC4}&\tiny{X}&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SMC5}&\tiny{X}&&\tiny{X}&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV1}&&&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{CV2}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{CV3}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{CV4}&&&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{CV5}&&&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{CV6}&&&&&&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{CV7}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{CV8}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{CV9}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{CV10}&&&&&&\tiny{X}&&&&&&&&&&&& \\ \hline
-\tiny{SR1}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SR2}&&&&&&&\tiny{X}&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SR3}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SR4}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SR5}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SM1}&\tiny{X}&&\tiny{X}&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{SM2}&\tiny{X}&\tiny{X}&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SM3}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{DS1}&&&&&&&&\tiny{X}&&&&&&&&&& \\ \hline
-\tiny{DS2}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{DS3}&&&&&&\tiny{X}&&&&&&&&&&&& \\ \hline
-\tiny{DS4}&&&&&&&&&\tiny{X}&&&&&&&&& \\ \hline
-\tiny{UI1}&&&&&&&&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&\tiny{X}&\tiny{X}& \\ \hline
-\tiny{UI2}&&&&&&&&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&\tiny{X}&\tiny{X}& \\ \hline
-\tiny{UI3}&&&&&&&&&&&&&&&&\tiny{X}&& \\ \hline
-\tiny{UI4}&&&&&&&&\tiny{X}&&&&&&&&&& \\ \hline
+SMC1&X&X&X&X&X&&&&&&&&&&&&&X \\ \hline
+SMC2&X&X&&&X&&&&&&&&&&&&&X \\ \hline
+SMC3&X&&&X&&&&&&&&&&&&&& \\ \hline
+SMC4&X&&&&&&&&&&&&&&&&& \\ \hline
+SMC5&X&&X&&&&&&&&&&&&&&& \\ \hline
+SMC6&&&&&&&&&&&&&&&&&& \\ \hline
+CV1&&&&&X&&&&&&&&&&&&&X \\ \hline
+CV2&&&&&X&&&&&&&&&&&&& \\ \hline
+CV3&&&&&X&&&&&&&&&&&&& \\ \hline
+CV4&&&&&X&&&&&&&&&&&&&X \\ \hline
+CV5&&&&&X&&&&&&&&&&&&&X \\ \hline
+CV6&&&&&&X&&&&&&&&&&&&X \\ \hline
+CV7&&&&&X&&&&&&&&&&&&& \\ \hline
+CV8&&&&&X&&&&&&&&&&&&& \\ \hline
+CV9&&&&&X&&&&&&&&&&&&& \\ \hline
+CV10&&&&&&X&&&&&&&&&&&& \\ \hline
+SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
+SR2&&&&&&&X&&&&&&&X&X&&& \\ \hline
+SR3&&&&&&&&&&&&&&&&&& \\ \hline
+SR4&&&&&&&&&&&&&&X&&&& \\ \hline
+SR5&&&&&&&&&&&&&&X&&&& \\ \hline
+SM1&X&&X&&X&&&&&&&&&&&&& \\ \hline
+SM2&X&X&&&X&&&&&&&&&&&&&X \\ \hline
+SM3&&&&&&&&&&&&&&&&&& \\ \hline
+DS1&&&&&&&&X&&&&&&&&&& \\ \hline
+DS2&X&X&X&X&X&X&&&&&&&&&&&&X \\ \hline
+DS3&&&&&&X&&&&&&&&&&&& \\ \hline
+DS4&&&&&&&&&X&&&&&&&&& \\ \hline
+DS5&&&&&X&X&X&X&&&&&X&&&&& \\ \hline
 \end{tabular}
 \end{table}
 
@@ -1143,28 +1141,34 @@ As per the Development Plan document, the team will be using branches on GitHub 
 \hline
 \multicolumn{19}{|c|}{\textbf{Functional Requirement-Test Matrix}}                          \\ \hline
  & \tiny{F1} & \tiny{F2} & \tiny{F3} & \tiny{F4} & \tiny{F5} & \tiny{F6} & \tiny{F7} & \tiny{F8} & \tiny{F9} & \tiny{F10} & \tiny{F11} & \tiny{F12} & \tiny{F13} & \tiny{F14} & \tiny{F15} & \tiny{F16} & \tiny{F17} & \tiny{F18} \\ \hline
-\tiny{SS1}&&&&&&&\tiny{X}&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS2}&&&&&&&\tiny{X}&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS3}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS4}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SS5}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS6}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SS7}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SS8}&&&&&\tiny{X}&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS9}&&&&&\tiny{X}&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS10}&&&&&\tiny{X}&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS11}&&&&&\tiny{X}&\tiny{X}&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS12}&&&&&&\tiny{X}&&\tiny{X}&\tiny{X}&&&&\tiny{X}&&&&&\tiny{X} \\ \hline
-\tiny{SS13}&&&&&&\tiny{X}&&\tiny{X}&\tiny{X}&&&&\tiny{X}&&&&&\tiny{X} \\ \hline
-\tiny{SS14}&&&&&&&&\tiny{X}&&&&&&&&&& \\ \hline
-\tiny{SS15}&&&&&&\tiny{X}&&&&&&&&&&&& \\ \hline
-\tiny{SS16}&&&&&&&&&\tiny{X}&&&&&&&&& \\ \hline
-\tiny{SS17}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS18}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS19}&\tiny{X}&&\tiny{X}&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS20}&\tiny{X}&&\tiny{X}&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS21}&\tiny{X}&\tiny{X}&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
-\tiny{SS22}&\tiny{X}&\tiny{X}&&&\tiny{X}&&&&&&&&&&&&&\tiny{X} \\ \hline
+UI1&&&&&&&&X&X&X&X&X&X&&&X&X& \\ \hline
+UI2&&&&&&&&X&X&X&X&X&X&&&X&X& \\ \hline
+UI3&&&&&&&&&&&&&&&&X&& \\ \hline
+UI4&&&&&&&&X&&&&&&&&&& \\ \hline
+UI5&&&&&&&&X&X&&&&&&&&& \\ \hline
+UI6&&&&&X&X&X&&&&&&X&X&&&& \\ \hline
+SS1&&&&&&&X&&&&&&&X&X&&& \\ \hline
+SS2&&&&&&&X&&&&&&&X&X&&& \\ \hline
+SS3&&&&&&&&&&&&&&&&&& \\ \hline
+SS4&&&&&&&&&&&&&&X&&&& \\ \hline
+SS5&&&&&&&&&&&&&&&X&&& \\ \hline
+SS6&&&&&&&&&&&&&&X&&&& \\ \hline
+SS7&&&&&&&&&&&&&&X&&&& \\ \hline
+SS8&&&&&X&X&&&&&&&&&&&&X \\ \hline
+SS9&&&&&X&X&&&&&&&&&&&&X \\ \hline
+SS10&&&&&X&X&&&&&&&&&&&&X \\ \hline
+SS11&&&&&X&X&&&&&&&&&&&&X \\ \hline
+SS12&&&&&&X&&X&X&&&&X&&&&&X \\ \hline
+SS13&&&&&&X&&X&X&&&&X&&&&&X \\ \hline
+SS14&&&&&&&&X&&&&&&&&&& \\ \hline
+SS15&&&&&&X&&&&&&&&&&&& \\ \hline
+SS16&&&&&&&&&X&&&&&&&&& \\ \hline
+SS17&X&X&X&X&X&&&&&&&&&&&&&X \\ \hline
+SS18&X&X&X&X&X&&&&&&&&&&&&&X \\ \hline
+SS19&X&&X&&&&&&&&&&&&&&& \\ \hline
+SS20&X&&X&&&&&&&&&&&&&&& \\ \hline
+SS21&X&X&&&X&&&&&&&&&&&&&X \\ \hline
+SS22&X&X&&&X&&&&&&&&&&&&&X \\ \hline
 \end{tabular}
 \end{table}
 
@@ -1177,37 +1181,35 @@ As per the Development Plan document, the team will be using branches on GitHub 
 \hline
 \multicolumn{19}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
  & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline
-\tiny{SMC1}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SMC2}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SMC3}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SMC4}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SMC5}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{CV1}&&&&&&&&\tiny{X}&&&&&&&&&& \\ \hline
-\tiny{CV2}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV3}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV4}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV5}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV6}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV7}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV8}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV9}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{CV10}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SR1}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SR2}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SR3}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SR4}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SR5}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SM1}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SM2}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SM3}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{DS1}&&&&&&\tiny{X}&&&&\tiny{X}&&&&&&&& \\ \hline
-\tiny{DS2}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{DS3}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{DS4}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{UI1}&\tiny{X}&\tiny{X}&\tiny{X}&&\tiny{X}&\tiny{X}&\tiny{X}&&\tiny{X}&\tiny{X}&&\tiny{X}&&&&&& \\ \hline
-\tiny{UI2}&\tiny{X}&\tiny{X}&\tiny{X}&\tiny{X}&&&&&&&&&&&&&& \\ \hline
-\tiny{UI3}&&&\tiny{X}&\tiny{X}&&&&&&&&&&&&&& \\ \hline
-\tiny{UI4}&&&\tiny{X}&&&\tiny{X}&&&&\tiny{X}&&&&&&&& \\ \hline
+SMC1&&&&&&&&&&&&&&X&X&&& \\ \hline
+SMC2&&&&&&&&&&&&&&X&X&&& \\ \hline
+SMC3&&&&&&&&&&&&&&X&&&& \\ \hline
+SMC4&&&&&&&&&&&&&&X&&&& \\ \hline
+SMC5&&&&&&&&&&&&&&X&&&& \\ \hline
+SMC6&&&&&&&&&&&&&&&&&&X \\ \hline
+CV1&&&&&&&&X&&&&&&&&&& \\ \hline
+CV2&&&&&&&&&&&&&&&&&& \\ \hline
+CV3&&&&&&&&&&&&&&&&&& \\ \hline
+CV4&&&&&&&&&&&&&&&&&& \\ \hline
+CV5&&&&&&&&&&&&&&&&&& \\ \hline
+CV6&&&&&&&&&&&&&&&&&& \\ \hline
+CV7&&&&&&&&&&&&&&&&&& \\ \hline
+CV8&&&&&&&&&&&&&&&&&& \\ \hline
+CV9&&&&&&&&&&&&&&&&&& \\ \hline
+CV10&&&&&&&&&&&&&&&&&& \\ \hline
+SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
+SR2&&&&&&&&&&&&&&X&&&& \\ \hline
+SR3&&&&&&&&&&&&&&X&&&& \\ \hline
+SR4&&&&&&&&&&&&&&&&&& \\ \hline
+SR5&&&&&&&&&&&&&&&&&& \\ \hline
+SM1&&&&&&&&&&&&&&X&&&& \\ \hline
+SM2&&&&&&&&&&&&&&X&X&&& \\ \hline
+SM3&&&&&&&&&&&&&&X&&&& \\ \hline
+DS1&&&&&&X&&&&X&&&&&&&& \\ \hline
+DS2&&&&&&&&&&&&&&X&X&&& \\ \hline
+DS3&&&&&X&&&&&&&&&&&&& \\ \hline
+DS4&&&&&&&&&&&&&&&&&& \\ \hline
+DS5&&&&&&&&&X&&X&&&&&&& \\ \hline
 \end{tabular}
 \end{table}
 
@@ -1218,29 +1220,35 @@ As per the Development Plan document, the team will be using branches on GitHub 
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
 \hline
 \multicolumn{19}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
- & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline
-\tiny{SS1}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS2}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS3}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS4}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS5}&&&&&&&&&&&&&&&\tiny{X}&&& \\ \hline
-\tiny{SS6}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS7}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS8}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS9}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS10}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS11}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS12}&&&&&\tiny{X}&\tiny{X}&&&&\tiny{X}&&&&&&&& \\ \hline
-\tiny{SS13}&&&&&\tiny{X}&\tiny{X}&&&&\tiny{X}&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS14}&&&&&&\tiny{X}&&&&\tiny{X}&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS15}&&&&&\tiny{X}&&&&&&&&&&&&& \\ \hline
-\tiny{SS16}&&&&&&&&&&&&&&&&&& \\ \hline
-\tiny{SS17}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS18}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS19}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SS20}&&&&&&&&&&&&&&\tiny{X}&&&& \\ \hline
-\tiny{SS21}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
-\tiny{SS22}&&&&&&&&&&&&&&\tiny{X}&\tiny{X}&&& \\ \hline
+ & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline\
+UI1&X&X&X&&X&X&X&&X&X&&X&&&&&& \\ \hline
+UI2&X&X&X&X&&&&&&&&&&&&&& \\ \hline
+UI3&&&X&X&&&&&&&&&&&&&& \\ \hline
+UI4&&&X&&&X&&&&X&&&&&&&& \\ \hline
+UI5&X&X&X&X&&&&&&&&&&&&&& \\ \hline
+UI6&X&X&X&X&&&&&X&&&&&&&&& \\ \hline
+SS1&&&&&&&&&&&&&&&X&&& \\ \hline
+SS2&&&&&&&&&&&&&&&X&&& \\ \hline
+SS3&&&&&&&&&&&&&&&X&&& \\ \hline
+SS4&&&&&&&&&&&&&&&X&&& \\ \hline
+SS5&&&&&&&&&&&&&&&X&&& \\ \hline
+SS6&&&&&&&&&&&&&&&&&& \\ \hline
+SS7&&&&&&&&&&&&&&&&&& \\ \hline
+SS8&&&&&&&&&&&&&&&&&& \\ \hline
+SS9&&&&&&&&&&&&&&&&&& \\ \hline
+SS10&&&&&&&&&&&&&&&&&& \\ \hline
+SS11&&&&&&&&&&&&&&&&&& \\ \hline
+SS12&&&&&X&X&&&&X&&&&&&&& \\ \hline
+SS13&&&&&X&X&&&&X&&&&X&X&&& \\ \hline
+SS14&&&&&&X&&&&X&&&&X&X&&& \\ \hline
+SS15&&&&&X&&&&&&&&&&&&& \\ \hline
+SS16&&&&&&&&&&&&&&&&&& \\ \hline
+SS17&&&&&&&&&&&&&&X&X&&& \\ \hline
+SS18&&&&&&&&&&&&&&X&X&&& \\ \hline
+SS19&&&&&&&&&&&&&&X&&&& \\ \hline
+SS20&&&&&&&&&&&&&&X&&&& \\ \hline
+SS21&&&&&&&&&&&&&&X&X&&& \\ \hline
+SS22&&&&&&&&&&&&&&X&X&&& \\ \hline
 \end{tabular}
 \end{table}
 
