redid title page

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -35,13 +35,13 @@
 	\begin{minipage}[t][][t]{0.5\textwidth}
 		\begin{flushleft} \large
 			\emph{Authors:}\\
-			Christopher McDonald\\
-			Harit Patel \\
-			Janak Patel \\
-			Jared Rayner  \\
-			Nisarg Patel  \\
-			Sam Hamel \\
-			Sharon Platkin \\
+			Christopher McDonald - \textit{001312456} \\
+			Harit Patel - \textit{001317372}\\
+			Janak Patel - \textit{001307060} \\
+			Jared Rayner - \textit{001311702}\\
+			Nisarg Patel - \textit{001322805} \\
+			Sam Hamel - \textit{001321692} \\
+			Sharon Platkin - \textit{001316625} \\
 		\end{flushleft}
 	\end{minipage}
 	~
