--- a/documentation/HazardAnalysis/HazardAnalysis.tex
+++ b/documentation/HazardAnalysis/HazardAnalysis.tex
@@ -39,9 +39,9 @@
 			Christopher McDonald - \textit{001312456} \\
 			Harit Patel - \textit{001317372}\\
 			Janak Patel - \textit{001307060} \\
-			Jared Rayner - \textit{00}\\
-			Nisarg Patel - \textit{00} \\
-			Sam Hamel - \textit{00} \\
+			Jared Rayner - \textit{001311702}\\
+			Nisarg Patel - \textit{001322805} \\
+			Sam Hamel - \textit{001321692} \\
 			Sharon Platkin - \textit{001316625} \\
 		\end{flushleft}
 	\end{minipage}
