--- a/documentation/HazardAnalysis/HazardAnalysis.tex
+++ b/documentation/HazardAnalysis/HazardAnalysis.tex
@@ -74,8 +74,10 @@
    \hline
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\ \hline
    Dec 29, 2017 & 1.0 & Main content done for all sections & Christopher McDonald \\ \hline
-   Jan 1, 2018 & 1.1 & Edit entire document & Sharon Platkin \\ \hline
+   Jan 1, 2018 & 1.1 & Edited document & Sharon Platkin \\ \hline
    Jan 3, 2018 & 1.2 & Edited document & Jared Rayner \\ \hline
+   Mar 4, 2018 & 1.3 & Revised  Figures& Christopher McDonald \\ \hline
+   Mar 5, 2018 & 1.4 & Edited scope & Sharon Platkin \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -119,10 +121,10 @@ The following terms and definitions will be used throughout this document:
 \section{System}
 \subsection{High-Level Design}
 The high-level design document covers in great detail the design of the system and can be found \href{run:../SystemDesign/Design.pdf}{here}. As a summary, the mechanical aspects include a hopper to hold all the table tennis balls and a spinning disk with cut outs to force feed the balls into a barrel. The barrel can hold multiple balls, that are then pushed up the barrel as the aforementioned disk spins. Once a ball reaches the end of the barrel, the ball will be shot out via a spinning wheel affixed to a motor attached to the end of the barrel. The entire mechanism is fixed to a rotating platform to have variable yaw. The spinning wheel can shoot at various speeds and can be manually set to multiple orientations by rotating in the roll direction, to achieve different types of spin. The shooting assembly will also have multiple manual settings for rotating in the y-axis, in order to achieve different yaw and ball trajectories.  \\ \\
-The electrical components include an Arduino, breadboard, motor driver, H bridge, and power supply to control the motors needed to spin the mechanism and wheel. There will also be a general purpose computer to run the software-based components and a USB camera to use for the computer vision system. 
+The electrical components include an Arduino, motors, a breadboard, a motor driver, an H bridge, and a power supply to control the motors needed to spin the mechanism and wheel. There will also be a general purpose computer to run the software-based components and a USB camera to use for the computer vision sub-system. 
 \subsection{Scope \& Boundary}
 The hazards outlined below will cover the hardware, electrical and software aspects of the SmartServe system. \\ \\
-Intentional misuse or destruction of the system will not be discussed as it is outside the scope of this document. The user is assumed to be using fully-functioning and maintained equipment including the table tennis balls, table and paddles. All electrical equipment is assumed to be working at production performance which includes all electrical wiring, components, boards and motors.
+Intentional misuse or destruction of the system will not be discussed as it is outside the scope of this document. The user is assumed to be using fully-functioning and maintained equipment including the table tennis balls, table and paddles. 
 
 \section{Hazards}
 The hazards outlined here can be categorized into 2 main categories: system and project. System hazards damage the user or the assets of the system where project hazards damage the integrity of the project and its success. The list of each can be found in Table \ref{table:hazard}. \\
